MTP-1804: fix spacing campaign

--- a/mt-kit/core/css/src/global/_links.scss
+++ b/mt-kit/core/css/src/global/_links.scss
@@ -319,10 +319,9 @@ $transportlink-colors: 'error' !default;
       h3 {
         margin-top: 0;
       }
-
-      @media only screen and (min-width: $breakpoint-large) {
+      > .highlighted-text {
         gap: 0;
-        > .highlighted-text + img {
+        & + img {
           width: 100%;
         }
       }
